# rational-functions

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  python-package.yml  python-publish.yml
docs/: getting_started.md  index.md  numerical_accuracy.md
docs/api/: polyroot.md  ratfunc.md  term.md
examples/: 01_rational_function_from_fraction.py  02_rational_function_calculus.py  03_rational_function_operations.py
src/rational_functions/: __init__.py  decomp.py  fit.py  integral.py  lcm.py  ratfunc.py  roots.py  rtypes.py  terms.py  types.py  utils.py
src/tests/: conftest.py  test_decomp.py  test_fit.py  test_integral.py  test_lcm.py  test_roots.py  test_terms.py  test_types.py  test_utils.py
src/tests/snapshots/test_terms/test_rational_term_repr/rterm0/: rterm_repr
src/tests/snapshots/test_terms/test_rational_term_repr/rterm2/: rterm_repr
src/tests/snapshots/test_terms/test_rational_term_repr/rterm3/: rterm_repr
src/tests/snapshots/test_terms/test_rational_term_repr/rterm4/: rterm_repr
src/tests/snapshots/test_terms/test_rational_term_str/rterm0/: rterm_str
src/tests/snapshots/test_terms/test_rational_term_str/rterm1/: rterm_str
src/tests/snapshots/test_terms/test_rational_term_str/rterm2/: rterm_str
src/tests/snapshots/test_terms/test_rational_term_str/rterm3/: rterm_str
src/tests/snapshots/test_terms/test_rational_term_str/rterm5/: rterm_str
src/tests/test_ratfunc/: test_basic.py  test_construct.py  test_eval.py  test_from_frac.py  test_operators.py
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf0/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf1/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf10/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf11/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf12/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf13/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf14/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf15/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf16/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf17/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf18/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf19/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf2/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf20/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf21/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf22/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf23/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf24/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf25/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf26/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf27/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf28/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf29/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf3/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf30/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf31/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf32/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf33/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf34/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf35/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf36/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf37/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf38/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf39/: ratfunc_str
src/tests/test_ratfunc/snapshots/test_operators/test_rfunc_str/rf4/: ratfunc_str
(+28 files in other folders)
