[project]
name = "rational-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
]

[project.scripts]
rational-functions = "rational_functions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mkdocs-api-autonav>=0.2.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings>=0.29.0",
    "pytest>=8.3.5",
    "pytest-snapshot>=0.9.0",
    "ruff>=0.11.2",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = { cmd = "pytest src/tests -v", help = "Run all unit tests" }
lint = { cmd = "ruff check src/rational_functions --fix", help = "Lint the project" }
format = { cmd = "black src", help = "Format the code" }
build_docs = { cmd = "mkdocs build", help = "Build the documentation" }
regen-snapshots = { cmd = "pytest --snapshot-update", help = "Regenerate all snapshots for tests that need them" }
